--- a/post-micro/src/main/resources/application.properties
+++ b/post-micro/src/main/resources/application.properties
@@ -6,5 +6,11 @@ spring.datasource.username=root
 spring.datasource.password=pass@word1
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+spring.jackson.serialization.fail-on-empty-beans=false
 
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+
+certificate-service.url= http://localhost:8090
+
+spring.config.import=optional:configserver:
+
